Implement VulkanMod rendering backend and shaders